Changes in version 1.1
----------------------

* PermutationGenerator and CombinationGenerator now implement
  java.lang.Iterable (ISSUE#1).

* Moved PermutationGenerator and CombinationGenerator into new combinatorics
  package.

* Moved NumberGenerator and its implementations into new number package.

* Added demo program for different probability distributions (ISSUE#2).

* Added method to the DataSet class for calculating the harmonic mean.

* RNGs no longer log any information to stdout (ISSUE#7) by default.
  The DefaultSeedGenerator class will log the seeds that it generates
  only if the org.uncommons.maths.random.debug System property is set to true.


Changes in version 1.0.2
------------------------

* Added generator for exponential distribution.

* Fixed possibility of out-of-range values in continuous uniform generator.

* Modified AESCounterRNG to allow seed size (AES key size) to be specified.
  Defaults to 128-bits.  192-bits and 256-bits are supported but they require
  the unlimited strength cryptography policy files (available from Sun) to be
  installed on the local machine.


Changes in version 1.0.1
------------------------

* Added minimum, maximum and median methods to DataSet class.

* Fixed logic around zero-length combinations and permutations.

* Improved unit test coverage.