@@ -48,7 +48,7 @@
     </fileset>
   </path>
 
-  <property name="version" value="1.1pre"/>
+  <property name="version" value="1.1"/>
   <property name="artifact.identifier" value="uncommons-maths-${version}"/>
 
   <!-- This is the minimum coverage percentage (for both lines and
